--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "escape-html": "^1.0.3",
+    "graphql": "^16.8.1",
     "lucide-react": "^0.373.0",
     "next": "^14.2.3",
     "payload": "beta",
@@ -41,6 +42,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@swc/core": "^1.4.17",
     "@tailwindcss/typography": "^0.5.12",
     "@types/escape-html": "^1.0.4",
     "@types/node": "^20.11.25",
