--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@payloadcms/plugin-cloud": "beta",
     "@payloadcms/richtext-lexical": "beta",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -34,6 +35,7 @@
     "graphql": "^16.8.1",
     "lucide-react": "^0.373.0",
     "next": "^14.2.3",
+    "next-themes": "^0.3.0",
     "payload": "beta",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
