chore(setup): add eslint and prettier

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
     "generate:types": "payload generate:types",
     "db:up": "docker-compose up -d",
     "db:down": "docker-compose down",
@@ -53,7 +55,11 @@
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.3",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3",
     "tsx": "^4.7.1",
     "typescript": "^5.4.2"
