--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,11 @@
 {
   "singleQuote": true,
-  "trailingComma": "all",
+  "jsxSingleQuote": true,
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "bracketSpacing": true,
   "printWidth": 100,
-  "semi": false
+  "semi": true,
+  "arrowParens": "always",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
