--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "node": ">=18.19.0"
   },
   "dependencies": {
-    "@payloadcms/db-mongodb": "beta",
-    "@payloadcms/next": "beta",
-    "@payloadcms/plugin-cloud": "beta",
-    "@payloadcms/richtext-lexical": "beta",
+    "@payloadcms/db-mongodb": "3.0.0-beta.30",
+    "@payloadcms/next": "3.0.0-beta.30",
+    "@payloadcms/plugin-cloud": "3.0.0-beta.30",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.30",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -40,7 +40,7 @@
     "lucide-react": "^0.373.0",
     "next": "^14.2.3",
     "next-themes": "^0.3.0",
-    "payload": "beta",
+    "payload": "3.0.0-beta.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
