--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,12 @@ services:
     logging:
       driver: none
 
+  smtp:
+    image: jeanberu/mailcatcher:0.8.0
+    ports:
+      - 1025:1025 # SMTP
+      - 1080:1080 # Web UI
+
 volumes:
   data:
   node_modules:
