--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@payloadcms/db-mongodb": "3.0.0-beta.30",
+    "@payloadcms/email-nodemailer": "^3.0.0-beta.30",
     "@payloadcms/next": "3.0.0-beta.30",
     "@payloadcms/plugin-cloud": "3.0.0-beta.30",
     "@payloadcms/richtext-lexical": "3.0.0-beta.30",
@@ -40,6 +41,7 @@
     "lucide-react": "^0.373.0",
     "next": "^14.2.3",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
     "payload": "3.0.0-beta.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -53,6 +55,7 @@
     "@tailwindcss/typography": "^0.5.12",
     "@types/escape-html": "^1.0.4",
     "@types/node": "^20.11.25",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "autoprefixer": "^10.4.19",
