--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "generate:types": "payload generate:types",
+    "viewEmails": "email dev --dir src/emails",
     "db:up": "docker-compose up -d",
     "db:down": "docker-compose down",
     "docker:build": "docker build --network=host -t my-next-app .",
@@ -33,6 +34,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-email/components": "0.0.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
@@ -45,6 +47,7 @@
     "payload": "3.0.0-beta.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-email": "2.1.2",
     "react-hook-form": "^7.51.4",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.3.0",
@@ -69,5 +72,8 @@
     "tailwindcss": "^3.4.3",
     "tsx": "^4.7.1",
     "typescript": "^5.4.2"
+  },
+  "resolutions": {
+    "strip-ansi": "6.0.1"
   }
 }
